# clock_in_record

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  readme.md  resoure.qrc
resources/: resources.qrc
src/: AttendanceMainWindow.cpp  AttendanceMainWindow.h  CMakeLists.txt  main.cpp
src/Cal/: WorkTimeCalculator.cpp  WorkTimeCalculator.h
src/Types/: AttendanceTypes.h
src/UpdateChecker/: GitHubUpdater.cpp  GitHubUpdater.h
src/Utils/: CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  CustomCalendarWidget.cpp  CustomCalendarWidget.h  CustomDateDelegate.h  TimeSettingDialog.cpp  TimeSettingDialog.h
