cmake_minimum_required(VERSION 3.16)
project(AttendanceApp VERSION 1.0.0 LANGUAGES CXX)

# 设置C++标准
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 手动指定 Qt 安装路径
set(CMAKE_PREFIX_PATH "C:/Qt/5.15.2/msvc2019_64")

# 查找Qt库
find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)

# Qt MOC设置
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# 编译器特定设置
if(MSVC)
    add_compile_options(/utf-8)
endif()

# 添加src子目录
add_subdirectory(src)